Avoid rotation anchor during transitional fullscreen states.

FullscreenController::isFullscreen is called exclusively by
WebViewImpl::resizeWithBrowserControls to exclude use of rotation
anchor.  The reason is that anchors incorrectly interpret the initial
offset restoration in FullscreenController::didUpdateLayout as a
layout-induced change.  Rotation anchors in particular tend to
snap page scale factor to extreme values as a result.

During the observed case, fullscreen state is still NeedsScrollAndStateRestore.
It's reasonable to consider every state in the machine other than "Initial"
(non-fullscreen) to count as fullscreen.

This change still leaves incorrect restoration behavior due to the resize
anchor, but the symptoms are much severe in that case because it doesn't
touch page scale.

NOTRY=true
BUG=698315

Review-Url: https://codereview.chromium.org/2745313002
Cr-Commit-Position: refs/heads/master@{#456495}

Former-commit-id: 80da37a9ae40452f920fdb8a5bbd55454f7e560c